--- a/01-new_year_time_counter/style/01-new_year_time_counter.css
+++ b/01-new_year_time_counter/style/01-new_year_time_counter.css
@@ -7,4 +7,36 @@
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
+
+  background-image: url("/01-new_year_time_counter/img/newYear.jpg");
+  background-size: cover;
+  background-position: center center;
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+
+  font-size: 4rem;
+  margin-top: -40rem;
+  font-weight: 300;
+
+}
+
+.big-text {
+  font-size: 6rem;
+  line-height: 1;
+  margin: 0 2rem;
+}
+
+.countdown-el {
+  text-align: center;
+}
+
+.countdown-container {
+  display: flex;
 }
