--- a/01-new_year_time_counter/style/01-new_year_time_counter.css
+++ b/01-new_year_time_counter/style/01-new_year_time_counter.css
@@ -22,7 +22,7 @@ body {
 h1 {
 
   font-size: 4rem;
-  margin-top: -40rem;
+  margin-top: -0rem;
   font-weight: 300;
 
 }
@@ -39,4 +39,7 @@ h1 {
 
 .countdown-container {
   display: flex;
+  flex-wrap: wrap;
+  line-height: 1;
+  margin: 1rem 2rem;
 }
