--- a/02-quiz_app/style/02-quiz_app.css
+++ b/02-quiz_app/style/02-quiz_app.css
@@ -8,8 +8,8 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0; 
 
-  background-color: #1d2951;
-  background-image: linear-gradient(315deg, #1d2951 0%, #dbe7fc 74%);
+  background-color: #6d8efa;
+  background-image: linear-gradient(45deg, #e9ebf2 0%, #b8d4fe 74%);
 
 
   min-height: 100vh;
@@ -23,7 +23,7 @@ body {
 
 .quiz-container {
 
-  border: dotted hsl(0, 92%, 46%);
+  /* border: dotted hsl(0, 92%, 46%); */
 
   background-color: #fff;
   width: 30rem;
@@ -31,7 +31,7 @@ body {
 
   border-radius: 10px;
 
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.1);
 
 
 }
@@ -45,17 +45,30 @@ ul {
   padding: 0;
 }
 
+ul li {
+  margin: 0.5rem;
+}
+
+ul li label {
+  cursor: pointer;
+}
+
 button {
-  background-color: bisque;
-  color: white;
+  background-color: rgb(87, 156, 254);
+  color: rgb(255, 255, 255);
   display: block;
   font-family: inherit;
   font-size: 1.3rem;
   width: 100%;
   padding: 1em;
   cursor: pointer;
+  border: none;
+  border-radius: 10px;
 }
 
 button:hover {
-  background-color: beige;
+  background-color: rgb(175, 219, 250);
+  color: rgb(0, 0, 0);
+  
+ 
 }
