Weather app with own CSS try

--- a/05-weather-app/style/05-weather-app.css
+++ b/05-weather-app/style/05-weather-app.css
@@ -8,3 +8,22 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
 }
+
+.weatherDetails {
+
+ 
+
+  border: dotted;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  justify-content: center;
+
+  /* width: 500px; */
+
+  
+  
+  
+
+}
